--- a/translator/pom.xml
+++ b/translator/pom.xml
@@ -3,4 +3,16 @@
   <groupId>SparkVP</groupId>
   <artifactId>SparkVP-translator</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  	<dependency>
+  		<groupId>commons-cli</groupId>
+  		<artifactId>commons-cli</artifactId>
+  		<version>1.3.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>log4j</groupId>
+  		<artifactId>log4j</artifactId>
+  		<version>1.2.17</version>
+  	</dependency>
+  </dependencies>
 </project>
