--- a/translator/pom.xml
+++ b/translator/pom.xml
@@ -14,5 +14,11 @@
   		<artifactId>log4j</artifactId>
   		<version>1.2.17</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.jena</groupId>
+  		<artifactId>jena-arq</artifactId>
+  		<version>2.13.0</version>
+  	</dependency>
+
   </dependencies>
 </project>
