--- a/executor/pom.xml
+++ b/executor/pom.xml
@@ -1,5 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <repositories>
+    <repository>
+      <id>cloudera</id>
+      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+    </repository>
+  </repositories>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>SparkVP</groupId>
@@ -26,6 +32,25 @@
   		<artifactId>log4j</artifactId>
   		<version>1.2.17</version>
   	</dependency>
-
+	<dependency>
+  		<groupId>com.google.protobuf</groupId>
+  		<artifactId>protobuf-java</artifactId>
+  		<version>3.3.0</version>
+  	</dependency>
+	<dependency>
+		<groupId>org.apache.spark</groupId>
+		<artifactId>spark-core_2.10</artifactId>
+		<version>1.6.0-cdh5.11.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.spark</groupId>
+		<artifactId>spark-sql_2.10</artifactId>
+		<version>1.6.0-cdh5.11.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.spark</groupId>
+		<artifactId>spark-hive_2.10</artifactId>
+		<version>1.6.0-cdh5.11.0</version>
+	</dependency>
   </dependencies>
 </project>
