--- a/translator/pom.xml
+++ b/translator/pom.xml
@@ -3,6 +3,7 @@
   <groupId>SparkVP</groupId>
   <artifactId>SparkVP-translator</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
   <dependencies>
   	<dependency>
   		<groupId>commons-cli</groupId>
@@ -19,6 +20,11 @@
   		<artifactId>jena-arq</artifactId>
   		<version>2.13.0</version>
   	</dependency>
-
+  	<dependency>
+  		<groupId>com.google.protobuf</groupId>
+  		<artifactId>protobuf-java</artifactId>
+  		<version>3.3.0</version>
+  	</dependency>
   </dependencies>
+ 
 </project>
